src/objects/Critical_Note__c.object
<CustomObject>
    <description>XLR8 custom object that records critical notes for a given client.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <infoMessage>Contacts in this Entity</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Critical Notes</relationshipLabel>
        <relationshipName>Critical_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Critical Notes</relationshipLabel>
        <relationshipName>Critical_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>Critical Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Contact__c</columns>
        <columns>Note__c</columns>
        <columns>Short_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Critical Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>